# Programacion-2

./: CMakeLists.txt
EjerciciosRepasoParcial1/: CMakeLists.txt
EjerciciosRepasoParcial1/Ej1/: Articulo.cpp  Articulo.h  CMakeLists.txt  main.cpp
EjerciciosRepasoParcial1/Ej4/: CMakeLists.txt  Fecha.cpp  Fecha.h  Persona.cpp  Persona.h  main.cpp
EjerciciosRepasoParcial1/EjReloj/: CMakeLists.txt  Hora.cpp  Hora.h  Reloj.cpp  Reloj.h  Temperatura.cpp  Temperatura.h  main.cpp
Parcial1/: CMakeLists.txt
Parcial1/Ejercicio1/: CMakeLists.txt  Punto3D.cpp  Punto3D.h  main.cpp
Parcial1/Ejercicio2/: CMakeLists.txt  TanqueDeAgua.cpp  TanqueDeAgua.h  main.cpp
ej_1_1/: CMakeLists.txt  lib.cpp  lib.h
ej_cli_compile/: README.md  main.cpp  some_function.cpp  some_function.h
ej_template/: CMakeLists.txt  main.cpp
ej_template_with_lib/: CMakeLists.txt  main.cpp
ej_template_with_lib_files/: CMakeLists.txt  main.cpp
ej_template_with_lib_files/lib/: lib_1.cpp  lib_1.h  lib_2.cpp  lib_2.h
u1/: CMakeLists.txt
u1/ej_1/: CMakeLists.txt  calcular_minimo_de_saltos.cpp  calcular_minimo_de_saltos.h  main.cpp
u1/ej_10/: CMakeLists.txt  main.cpp
u1/ej_12/: CMakeLists.txt  main.cpp
u1/ej_15/: CMakeLists.txt  main.cpp
u1/ej_4/: CMakeLists.txt  main.cpp
u1/ej_7/: CMakeLists.txt  main.cpp
u1/ej_8/: CMakeLists.txt  main.cpp
u2/: CMakeLists.txt
u2/ej1/: CMakeLists.txt  main.cpp
u2/ej12/: CMakeLists.txt  main.cpp
u2/ej2/: CMakeLists.txt  main.cpp
u2/ej4/: CMakeLists.txt  main.cpp
u2/ej5/: CMakeLists.txt  main.cpp
u2/ej8/: CMakeLists.txt  (+1 more)
u3/: CMakeLists.txt
(+45 files in other folders)
