cmake_minimum_required(VERSION 3.17)
project(ucc_2022)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory(u1)
add_subdirectory(u2)
add_subdirectory(u3)
add_subdirectory(Parcial1)
add_subdirectory(EjerciciosRepasoParcial1)
add_subdirectory(ej_1_1)
add_subdirectory(ej_template)
add_subdirectory(ej_template_with_lib)
add_subdirectory(ej_template_with_lib_files)