cmake_minimum_required(VERSION 3.17)

add_executable(${PROJECT_NAME}_EjerciciosRepasoParcial1_Ej_1 main.cpp Articulo.cpp Articulo.h ../Ej4/Persona.cpp ../Ej4/Persona.h ../Ej4/Fecha.cpp ../Ej4/Fecha.h ../EjReloj/main.cpp ../EjReloj/Hora.cpp ../EjReloj/Hora.h ../EjReloj/Temperatura.cpp ../EjReloj/Temperatura.h)